<resources>
    <string name="app_name">DrPanda</string>
    <string name="action_settings">Settings</string>
    <string name="tab_1">Main Tab</string>
    <string name="tab_2">First Aid</string>
    <string name="tab_3">Locations</string>
    <string name="tab_label1">Main Tab</string>
    <string name="tab_label2">First Aid</string>
    <string name="tab_label3">Locations</string>
    <string name="create_prof_string">Create Profile</string>
    <string name="view_prof_string">View Profile</string>

    <string name="pet_name_field">Pet Name</string>
    <string name="pet_breed_field">Pet Breed</string>
    <string name="pet_gender_field">Pet Gender</string>
    <string name="pet_dob_field">Date of Birth</string>
    <string name="pet_check_field">Add Checkup for Pet</string>
    <string name="form_save">Save Profile</string>
    <string name="form_imageadd">Add Image</string>

    <string name="fa_food_poisoning">Food Poisoning</string>
    <string name="fa_allergies">Allergies</string>
    <string name="fa_injuries">Injuries</string>
    <string name="fa_placeholder">[Placeholder]</string>

    <string name="petdate_value_field">Date</string>
    <string name="petdate_type_field">Type(Check or Vacc)</string>
    <string name="petdate_time_field">24 hour fmt(e.g. 17:03)</string>
    <string name="petdate_add_but">Add Date</string>
    <string name="petdate_view_check_but">Checkup Graph</string>
    <string name="medication_but">Medication</string>
    <string name="allergies_but">Allergies</string>

    <string name="notification_goto_but">Add Notification</string>
    <string name="noti_add_but">Add Notification</string>

    <string name="profile_init_text">Pet Profile</string>
    <string name="add_med">Add Medication</string>

    <string name="hint_med_name">Medicine Name</string>
    <string name="hint_med_weeks">Duration(in weeks)</string>
    <string name="hint_med_dosage">Dosage</string>
    <string name="hint_med_startdate">Start Date</string>
    <string name="hint_med_time">Time</string>
    <string name="hint_med_days">Every x days</string>
</resources>
