<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:id="@+id/set_noti_lin_layout"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/set_noti_date_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/petdate_value_field" />

    <EditText
        android:id="@+id/set_noti_date_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/petdate_type_field" />


    <EditText
        android:id="@+id/set_noti_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/petdate_time_field" />

    <Button
        android:id="@+id/but_noti_add"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/noti_add_but" />

</LinearLayout>